# mlops-hw1

./: .env  .gitignore  Dockerfile  README.md  Untitled-1.ipynb  app.py  docker-compose.yml  pyproject.toml
ml-rest-api/: README.md  app.py  pyproject.toml
ml-rest-api/ml_rest_api/: __init__.py  auxiliary.py
ml_rest_api/: __init__.py  auxiliary.py  controller.py  data_helpers.py  model_helpers.py
postgres-data/postgres/base/1/: 1249  1249_vm  1255  1255_vm  1259  1259_vm  12829_vm  12833  12834  12838  12843  12844  12844_vm  12848  12854  12858  2601_vm  2606  2606_vm  2607_vm  2608  2608_vm  2609_vm  2610_vm  2615  2615_vm  2618  2618_vm  2619  2651  2655  2659  2660  2661  2662  2664  2665  2666  2668  2669  (+25 more)
postgres-data/postgres/base/12993/: 1249_vm  1259  12829  12834  12839  12843  12849  12849_vm  12853  12854_vm  2601_vm  2605_vm  2606_vm  2608  2609  2612  2615  2619  2619_vm  2652  2658  2662  2663  2664  2665  2667  2668  2670  2674  2675  2678  2681  2682  2684  2685  2687  2689  2690  2691  2692  (+31 more)
postgres-data/postgres/base/12994/: 1247  1247_vm  1249  1255_vm  (+54 more)
postgres-data/postgres/global/: 1136_vm  1137  1213_vm  1214  1214_vm  1232  1233  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  2677  2694  2695  2697  2698  pg_control  pg_internal.init
postgres-data/postgres/pg_xact/: 0000
server/: .dockerignore  Dockerfile  app.py  pyproject.toml
server/ml_rest_api/: __init__.py  auxiliary.py  controller.py  db_models.py  model_helpers.py
server/templates/: landing.html
server/tests/: test_data_helpers.py
(+76 files in other folders)
