[tool.poetry]
name = "ml-rest-api"
version = "0.1.0"
description = ""
authors = ["Ivan Skvortsov <iaskvortsov@edu.hse.ru>"]
readme = "README.md"
repository = "https://github.com/ivanskv2000/mlops-hw1"
packages = [{include = "ml_rest_api"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
pandas = "^1.5.0"
scikit-learn = "^1.1.2"
Flask = "2.1.2"
flask-restx = "^0.5.1"
werkzeug = "2.1.2"
pathlib = "^1.0.1"
joblib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
