[tool.poetry]
name = "ml-rest-api"
version = "1.0"
description = "MlOps course: Home Assignment #1 (Rest API)"
authors = ["Ivan Skvortsov <iaskvortsov@edu.hse.ru>"]
readme = "README.md"
repository = "https://github.com/ivanskv2000/mlops-hw1"
packages = [{include = "ml_rest_api"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"
pandas = "^1.5.0"
scikit-learn = "^1.1.2"
Flask = "2.1.2"
flask-restx = "^0.5.1"
werkzeug = "2.1.2"
pathlib = "^1.0.1"
joblib = "^1.2.0"
importlib-resources = "^5.10.0"
poetry = "^1.2.2"
psycopg2-binary = "^2.9.5"
SQLAlchemy = "^1.4.44"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
